Fix scrolling the comments container when stretched and inverted.

--- a/src/stylesheets/comments.scss
+++ b/src/stylesheets/comments.scss
@@ -133,6 +133,7 @@
 		display: flex;
 
 		.o-chat--comments-container {
+			height: 100%;
 			max-width: 100%;
 			align-self: flex-end;
 		}
